4.0 internals: constructor DI, persistence/codecs, and WorldData typed keys (#482)