@@ -17,11 +17,13 @@
  */
 package de.eintosti.buildsystem.world.display;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 import de.eintosti.buildsystem.api.world.BuildWorld;
 import de.eintosti.buildsystem.api.world.data.WorldData;
+import de.eintosti.buildsystem.api.world.data.WorldDataKey;
 import de.eintosti.buildsystem.api.world.display.Displayable;
 import de.eintosti.buildsystem.api.world.display.Folder;
 import de.eintosti.buildsystem.api.world.display.WorldSort;
@@ -39,7 +41,7 @@ class DisplayOrderingTest {
         WorldData data = mock(WorldData.class);
         when(world.getName()).thenReturn(name);
         when(world.getData()).thenReturn(data);
-        when(data.isPinned()).thenReturn(pinned);
+        when(data.get(WorldDataKey.PINNED)).thenReturn(pinned);
         return world;
     }
 
@@ -80,7 +82,7 @@ class DisplayOrderingTest {
                 DisplayOrdering.withPriorities(WorldSort.NAME_A_TO_Z.getComparator()));
 
         // The pinned world floats to the top even though the folder name sorts first alphabetically.
-        assertEquals("alpha", result.get(0));
+        assertEquals("alpha", result.getFirst());
         assertEquals(List.of("alpha", "aaa-folder", "zulu"), result);
     }
 
